tests/NormalTests/paczka1/fuzzy1/74323614.err
Error in line 1: B9rbmz A846 64,6
Error in line 2: B9rbmz A24 11,9
Error in line 4: 5W7iKF S830 25,05
Error in line 7: 5W7iKF S830 19,1
Error in line 11: CSCCKOBXRrT A24 70,9
Error in line 8: W13 A24 41,3
Error in line 23: XZL S124 85,0
Error in line 28: B9rbmz S124 56,8
Error in line 27: A846 A846 13,0
Error in line 37: W13 A846 15,1
